Don't update clipboard before cut/paste operation succeedes.

BUG: 318757
FIXED-IN: 4.11
REVIEW: 111585